ajouter un composant de recherche

--- a/src/app/list-tweets/list-tweets.component.html
+++ b/src/app/list-tweets/list-tweets.component.html
@@ -3,10 +3,10 @@
                 <div class="tweet">
                     <div class="our-team">
                         <div class="picture">
-                            <img class="img-fluid" src="https://picsum.photos/130/130?image=1027">
+                            <img class="img-fluid" src="https://picsum.photos/130/130?image=839">
                         </div>
                         <div class="team-content">
-                            <h3 class="name">Michele Miller</h3>
+                            <h3 class="name">Patricia Knott</h3>
                             <h4 class="title">Web Developer</h4>
                         </div>
                         <ul class="social">
