--- a/src/app/list-tweets/list-tweets.component.css
+++ b/src/app/list-tweets/list-tweets.component.css
@@ -3,19 +3,21 @@ body {
   height: 100vh;
   background-image: url(https://picsum.photos/g/3000/2000);
   background-size: cover;
- 
-  
 }
 .row {
-    display: flex;
-    flex-direction: initial;
-    flex-wrap:  wrap;
-    justify-content:space-around;
-   
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
 }
-.tweet{ 
-  width: 250px;
-  height: 50px;
+
+.tweet {
+  margin: 2px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
 }
 .our-team {
   padding: 30px 0 40px;
@@ -30,7 +32,7 @@ body {
   display: inline-block;
   height: 130px;
   width: 130px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   z-index: 1;
   position: relative;
 }
@@ -73,7 +75,9 @@ body {
   transform: scale(1);
   transition: all 0.9s ease 0s;
 }
-
+.name {
+  
+}
 .our-team:hover .picture img {
   box-shadow: 0 0 0 14px #f7f5ec;
   transform: scale(0.7);
