--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -1,24 +1,11 @@
-html, body {
-  font-family: 'Montserrat Alternates', sans-serif;
-  color: #FFFFFF;
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
 
 a, a:visited, a:hover {
   color: inherit;
   text-decoration: none;
 }
 main {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0 auto;
-  padding: 0 26px;
-  width: 100%;
+  position: relative;
+    width: 100%;
   height: 60%;
   background: rgba(154,57,163,1);
   background: -moz-linear-gradient(-45deg, rgba(154,57,163,1) 0%, rgba(65,103,168,1) 100%);
