--- a/src/app/list-tweets/list-tweets.component.html
+++ b/src/app/list-tweets/list-tweets.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-            <div class="row">
-                <div class="tweet">
+            <div *ngFor="let item of tweets" class="row">
+                <div class="tweet" style="width: 20%">
                     <div class="our-team">
                         <div class="picture">
                             <img class="img-fluid" src="https://picsum.photos/130/130?image=839">
@@ -10,61 +10,7 @@
                             <h4 class="title">Web Developer</h4>
                         </div>
                         <ul class="social">
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="tweet">
-                    <div class="our-team">
-                        <div class="picture">
-                            <img class="img-fluid" src="https://picsum.photos/130/130?image=839">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="name">Patricia Knott</h3>
-                            <h4 class="title">Web Developer</h4>
-                        </div>
-                        <ul class="social">
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="tweet">
-                    <div class="our-team">
-                        <div class="picture">
-                            <img class="img-fluid" src="https://picsum.photos/130/130?image=856">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="name">Justin Ramos</h3>
-                            <h4 class="title">Web Developer</h4>
-                        </div>
-                        <ul class="social">
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="tweet">
-                    <div class="our-team">
-                        <div class="picture">
-                            <img class="img-fluid" src="https://picsum.photos/130/130?image=836">
-                        </div>
-                        <div class="team-content">
-                            <h3 class="name">Mary Huntley</h3>
-                            <h4 class="title">Web Developer</h4>
-                        </div>
-                        <ul class="social">
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
+                            <li><a href="#" ></a></li>
                         </ul>
                     </div>
                 </div>
