--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -3,10 +3,10 @@ a, a:visited, a:hover {
   color: inherit;
   text-decoration: none;
 }
-main {
+.container {
   position: relative;
     width: 100%;
-  height: 60%;
+  height: 100%;
   background: rgba(154,57,163,1);
   background: -moz-linear-gradient(-45deg, rgba(154,57,163,1) 0%, rgba(65,103,168,1) 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(154,57,163,1)), color-stop(100%, rgba(65,103,168,1)));
@@ -23,6 +23,7 @@ h1 {
   font-size: 1.92em;
   font-weight: 600;
   letter-spacing: -0.055em;
+ padding-top: 3%;
 }
 h2 {
   display: block;
@@ -32,35 +33,25 @@ h2 {
   font-size: 1.25em;
   letter-spacing: -0.015em;
 }
-.container {
-  position: relative;
-  margin: calc(75px + 2vh + 2vw) auto 0 auto;
-  padding: 0;
-  width: 100%;
-  max-width: 840px;
-}
-.search-box {
-  position: relative;
-  width: 100%;
-  max-width: 360px;
-  height: 60px;
-  border-radius: 120px;
-  margin: 0 auto;
-}
+ 
+ 
  
 .search input[type=text] {
   padding: 10px;
   font-size: 17px; 
-  width: 60%;
+  width: 20%;
   background: #f1f1f1;
   border: 0;
   float: left;
   -webkit-border-radius: 4px 0 0 4px;
   border-radius: 4px 0 0 4px;
+  margin-left: 35%;
+    margin-bottom: 3%;
+
 }
 .search button {
   float: left;
-  width: 20%;
+  width: 10%;
   padding: 10px;
   background: #2196F3;
   color: white;
@@ -68,7 +59,10 @@ h2 {
   border: 1px solid grey;
   border-left: none;
   cursor: pointer;
-}
+    -webkit-border-radius: 4px 0 0 4px;
+  border-radius: 4px 0 0 4px;
+  margin-bottom: 3%;
+ }
 
 .search button:hover {
   background: #0b7dda;
