--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<main>
+
 	<div class="container">
 		<h1>Twitter Mnager</h1>
 		<h2>Rechercher par hachtag dans Twitter !</h2>
@@ -6,10 +6,10 @@
 			<div class="search-icon"><i class="fa fa-search search-icon"></i></div>
 			<div   class="search"> 
              <input type="text" placeholder="Search.." name="search2">
-            <button type="submit"><i class="fa fa-search"></i></button>			</div>
+            <button type="submit"  > Chercher</button>		
+  	</div>
 		 
 			<div class="go-icon"><i class="fa fa-arrow-right"></i></div>
 		</div>
 
 	</div>
-</main>
