--- a/src/app/list-tweets/list-tweets.component.html
+++ b/src/app/list-tweets/list-tweets.component.html
@@ -7,7 +7,9 @@
                         </div>
                         <div class="team-content">
                             <h3 class="name">Patricia Knott</h3>
-                            <h4 class="title">Web Developer</h4>
+                            <h4 class="title">Web Developer Web Developer
+ Web Developer Web Developer Web Developer Web Developer
+</h4>
                         </div>
                         <ul class="social">
                             <li><a href="#" ></a></li>
