--- a/src/app/tweet-detail/tweet-detail.component.html
+++ b/src/app/tweet-detail/tweet-detail.component.html
@@ -3,17 +3,11 @@
                     <div class="our-team">
                         <div class="picture">
                             <img class="img-fluid" src="https://picsum.photos/130/130?image=839">
+                              <h3 class="name">Patricia Knott</h3>
                         </div>
-                        <div class="team-content">
-                            <h3 class="name">Patricia Knott</h3>
-                            <h4 class="title">Web Developer</h4>
+                        <div class="tweet-content"> 
+                            <h4 class="title">Un développeur web est un informaticien spécialisé dans la programmation ou expressément impliqué dans le développement des applications du World Wide Web, ou des applications qui sont exécutées ... Wikipédia</h4>
                         </div>
-                        <ul class="social">
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-facebook" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-twitter" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-google-plus" aria-hidden="true"></a></li>
-                            <li><a href="https://codepen.io/collection/XdWJOQ/" class="fa fa-linkedin" aria-hidden="true"></a></li>
-                        </ul>
-                    </div>
+                     </div>
                 </div>
          </div>
