--- a/src/app/list-tweets/list-tweets.component.css
+++ b/src/app/list-tweets/list-tweets.component.css
@@ -111,3 +111,40 @@
   text-decoration: none;
 }
  
+.search input[type=text] {
+  padding: 10px;
+  font-size: 17px; 
+  width: 20%;
+  background: #f1f1f1;
+  border: 0;
+  float: left;
+  -webkit-border-radius: 4px 0 0 4px;
+  border-radius: 4px 0 0 4px;
+  margin-left: 35%;
+    margin-bottom: 3%;
+
+}
+.search button {
+  float: left;
+  width: 10%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+    -webkit-border-radius: 4px 0 0 4px;
+  border-radius: 4px 0 0 4px;
+  margin-bottom: 3%;
+ }
+
+.search button:hover {
+  background: #0b7dda;
+}
+
+.search::after {
+  content: "";
+  clear: both;
+  display: table;
+}
