--- a/src/app/list-tweets/list-tweets.component.html
+++ b/src/app/list-tweets/list-tweets.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 			<div class="search" style="display:flex; align-items: right;">  
-             <input type="text" placeholder="Search.." name="search2">
-            <button type="submit"  > Chercher</button>		
+             <input type="text" placeholder="Search.." [(ngModel)]="hashtag">
+            <button type="submit" (click) = "search()" > Chercher</button>		
   	   </div> 
       <div *ngFor="let item of tweets"  class="row">
             <div class="tweet" style="width: 20%" (click)="navigate(item.id)">
